# ckanext-zenodo

./: README.md  setup.cfg  setup.py
.github/workflows/: test.yml
ckanext/zenodo/: cli.py  helpers.py  plugin.py  views.py
ckanext/zenodo/assets/: style.css  webassets.yml
ckanext/zenodo/assets/js/modules/: add-contributor.js  author-affiliation.js  author-role.js  communities.js  contributor.js  data-interval.js  doi-radio.js  get-doi.js  resource-type.js
ckanext/zenodo/config/: contributor_roles.json  date_type.json  resource_types.json
ckanext/zenodo/logic/: action.py  auth.py  schema.py  validators.py
ckanext/zenodo/templates/package/: base_form_page.html  edit.html  new_resource.html  new_resource_not_draft.html  resource_edit.html  resource_edit_base.html
ckanext/zenodo/templates/package/snippets/: additional_info.html  package_form.html  package_metadata_fields.html  resource_form.html
ckanext/zenodo/templates/snippets/: custom_form_fields.html
ckanext/zenodo/tests/: test_helpers.py  test_views.py
ckanext/zenodo/tests/logic/: test_action.py  test_auth.py  test_validators.py
