[metadata]
name = ckanext-zenodo
version = 0.0.1
description = zenodo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geoecomar/ckanext-zenodo
author = liu
author_email = zijian.liu@geoecomar.ro
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN zenodo

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             zenodo = ckanext.zenodo.plugin:ZenodoPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/zenodo/i18n/ckanext-zenodo.pot
width = 80

[init_catalog]
domain = ckanext-zenodo
input_file = ckanext/zenodo/i18n/ckanext-zenodo.pot
output_dir = ckanext/zenodo/i18n

[update_catalog]
domain = ckanext-zenodo
input_file = ckanext/zenodo/i18n/ckanext-zenodo.pot
output_dir = ckanext/zenodo/i18n
previous = true

[compile_catalog]
domain = ckanext-zenodo
directory = ckanext/zenodo/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
